mexendo com input e switch case

--- a/javascript/external.html
+++ b/javascript/external.html
@@ -16,5 +16,10 @@
 
         <p id="escada">1</p>
         <button type="button" onclick="crescente()">UP!</button>
+
+        <p>Digite um número: <input type="text" id="texto"></p>
+        <p id="resultado"> </p>
+        <button onclick="withInput()">Checar</button>
+        
     </body>
 </html>
