--- a/javascript/startagain.html
+++ b/javascript/startagain.html
@@ -26,5 +26,11 @@
             //aqui ele loga no terminal do navegaor (f12) a mensagem
             console.log ("logando no terminal");
         </script>
+
+        <input id="texto">
+        <button onclick="console.log(document.getElementById('texto').value)">log</button>
+<!--        <script>
+            console.log(document.getElementById("texto").innerHTML);
+        </script>-->
     </body>
 </html>
