--- a/javascript/external.html
+++ b/javascript/external.html
@@ -12,7 +12,7 @@
         <button type="button" onclick="funcao()">Mudar!</button>
 
         <p id="vaivem">Now you see me...</p>
-        <button type="button" onclick="vaivem()">Change!</button>
+        <button id="but" type="button" onclick="vaivem()">Change!</button>
 
         <p id="escada">1</p>
         <button type="button" onclick="crescente()">UP!</button>
@@ -21,5 +21,10 @@
         <p id="resultado"> </p>
         <button onclick="withInput()">Checar</button>
         
+        <p><input id="logi1" type="text"></p>
+        <p><input id="logi2" type="text"></p>
+        <p id="outputis">a</p>
+        <button onclick="logics()">and/or</button>
+
     </body>
 </html>
